
Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
16-May-2002
Acknowledgements:
    Thanks to James Murty for adding caching of servlet instances, a default mapping for servlet classes, and some XML
    parsing cleanup.

Additions:
    1. ServletUnit now caches its servlet instances so that multiple invocations can use the same instance.  This more
       closely matches the servlet spec.
    2. Leading and trailing spaces in web.xml text nodes are now ignored.
    3. If no other mapping matches a servlet name in a URL, ServletUnit will try to treat it as a servlet class name.
       This means that you can use something like http://localhost/com.nowhere.MyServlet to access your servlet without
       explicitly registering it.

14-May-2002
Additions:
    1. A <select> control with a size attribute may now have its value undefined. The specification does not require
       this behavior, but both IE 5.5 and Netscape 6.2 do this.
    2. WebResponse.getForms now caches its result so that multiple calls will return the same set of objects.
    3. WebClient.sendRequest is now available as an alias for WebRequest.getResponse

 9-May-2002
Acknowledgements:
    Thanks to Yassen Damyanov for fixing a bug in the handling response headers

Problems fixed:
    1. Response headers were truncated to the first word only
    2. The servletunit tutorial failed with a NullPointerException in the first step.

 8-Apr-2002
Additions:
    1. It is now possible to set the value of a hidden field in a form using a mechanism which will support scripting in the future: